Fix overflow of images in changelogs

--- a/app/javascript/stylesheets/script_versions.css
+++ b/app/javascript/stylesheets/script_versions.css
@@ -16,3 +16,6 @@
 .version-changelog {
   overflow-wrap: anywhere;
 }
+.version-changelog img {
+  max-width: 100%;
+}
